[tool.poetry]
name = "fpl"
version = "0.1.0"
description = "A Python API for FPL statistics"
authors = ["Mikkel Nielsen <noxern@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
httpx = "^0.23.0"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
